--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 		<b class="name">My name is Sebastian Kumór</b>
 		<p>I'm a student at Kielce University of Technology. My main languages are C, C++ and Lua.</p>
 
-		<a href="https://github.com/thekumor">GitHub</a>
-		<a href="https://www.youtube.com/channel/UCjzB0IKE2FWIXw2e7r91Lgw">YouTube</a>
+		<a href="https://github.com/thekumor">● GitHub →</a>
+		<a href="https://www.youtube.com/channel/UCjzB0IKE2FWIXw2e7r91Lgw">● YouTube →</a>
 	</div>
 
 	<div class="footer">
