--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<!-- CSS and others. -->
 	<link rel="stylesheet" href="style.css" />
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto" />
-	<link rel="icon" type="image/x-icon" href="img/icon.ico">
+	<link rel="icon" type="image/x-icon" href="img/logo.png" type="png">
 
 	<!-- Embed for websites. -->
 	<meta content="The Kumor" property="og:title" />
@@ -29,46 +29,60 @@
 
 <body>
 	<!-- SVG for logo. -->
+	<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+	<!-- Created with Inkscape (http://www.inkscape.org/) -->
+
 	<svg width="825.42603" height="825.42639" viewBox="0 0 218.39397 218.39407" version="1.1" id="svg5"
-		inkscape:version="1.2 (dc2aedaf03, 2022-05-15)" sodipodi:docname="test.svg"
+		inkscape:version="1.3 (0e150ed6c4, 2023-07-21)" sodipodi:docname="logo_transparent.svg"
+		inkscape:export-filename="logo.png" inkscape:export-xdpi="96" inkscape:export-ydpi="96"
 		xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
 		xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" xmlns="http://www.w3.org/2000/svg"
 		xmlns:svg="http://www.w3.org/2000/svg">
 		<sodipodi:namedview id="namedview7" pagecolor="#ffffff" bordercolor="#000000" borderopacity="0.25"
 			inkscape:showpageshadow="2" inkscape:pageopacity="0.0" inkscape:pagecheckerboard="0"
 			inkscape:deskcolor="#d1d1d1" inkscape:document-units="mm" showgrid="false" showguides="false"
-			inkscape:zoom="0.1767767" inkscape:cx="280.01429" inkscape:cy="639.22453" inkscape:window-width="1920"
-			inkscape:window-height="1009" inkscape:window-x="1912" inkscape:window-y="-8" inkscape:window-maximized="1"
+			inkscape:zoom="0.70710678" inkscape:cx="424.26407" inkscape:cy="444.77017" inkscape:window-width="1920"
+			inkscape:window-height="1001" inkscape:window-x="-9" inkscape:window-y="-9" inkscape:window-maximized="1"
 			inkscape:current-layer="layer1" />
 		<defs id="defs2" />
 		<g inkscape:label="Warstwa 1" inkscape:groupmode="layer" id="layer1"
 			transform="translate(-61.491982,-21.351646)">
 			<path
-				style="font-size:90.311px;font-family:Georgia;-inkscape-font-specification:Georgia;fill:#ff2a2a;fill-opacity:1;stroke:none;stroke-width:1.39835;stroke-dasharray:none;stroke-opacity:1"
-				d="m 205.8663,177.82914 a 78.058345,52.969881 0 0 1 -23.64365,5.10317 c 10.59798,14.15867 17.23675,23.94515 19.8132,29.24527 l 8.15661,-0.2336 h 8.04053 c 10.02151,0 18.29514,0.11654 24.82077,0.34959 l -0.2336,-5.01032 -10.60372,-3.26373 c -3.49588,-1.00993 -6.33098,-2.40829 -8.50619,-4.19506 -2.17521,-1.86447 -4.38929,-4.27185 -6.64218,-7.22393 z"
-				id="path1190" />
+				d="m 118.30382,114.66257 a 60.637175,30.916421 0 0 0 -5.53938,12.71965 60.637175,30.916421 0 0 0 5.53938,12.7192 z"
+				style="font-size:246.944px;font-family:'Bernadette Rough';-inkscape-font-specification:'Bernadette Rough';fill:#ff9955;stroke-width:1.93249;stroke:#000000;stroke-opacity:1"
+				id="path16" />
 			<path
-				style="font-size:90.311px;font-family:Georgia;-inkscape-font-specification:Georgia;fill:#ffd42a;stroke:none;stroke-width:1.39835;stroke-dasharray:none;stroke-opacity:1"
-				d="m 116.0371,168.30832 v 7.86163 c 0,4.66119 -0.0398,8.93304 -0.11744,12.81733 0,3.80663 -0.0384,7.26416 -0.11605,10.37159 -0.0777,1.78677 -1.12646,2.99048 -3.1463,3.61196 l -14.333125,4.3125 0.465663,5.01031 c 9.866142,-0.23307 19.499742,-0.34958 28.899762,-0.34958 9.24466,0 18.48891,0.11653 27.73356,0.34958 l -0.34959,-5.01031 -12.93476,-4.07898 c -1.94216,-0.62151 -2.95118,-1.94173 -3.02887,-3.96156 -0.0777,-3.10744 -0.15582,-6.56493 -0.23352,-10.37156 v -9.96602 a 78.058345,52.969881 0 0 1 -22.83932,-10.59689 z"
-				id="path1188" />
+				d="m 141.75216,165.18548 a 74.131085,41.848191 0 0 1 -23.44834,-9.87519 v 29.37175 c 0,2.64206 -0.51389,4.91734 -1.54136,6.82549 -0.95408,1.83476 -2.53183,3.22888 -4.73354,4.18296 -1.32104,0.58713 -3.59632,1.02747 -6.8255,1.32103 -3.22918,0.29356 -5.687631,0.51374 -7.375613,0.66052 v 7.81627 h 64.840553 v -7.81627 c -2.12832,-0.0734 -4.80695,-0.47672 -8.03613,-1.21063 -3.15579,-0.73391 -5.32098,-1.35789 -6.49524,-1.87162 -2.42189,-1.17425 -4.10972,-2.71546 -5.0638,-4.62362 -0.88069,-1.90815 -1.32103,-4.07335 -1.32103,-6.49523 z"
+				style="font-size:246.944px;font-family:'Bernadette Rough';-inkscape-font-specification:'Bernadette Rough';fill:#ffdd55;stroke-width:1.93249"
+				id="path13" />
 			<path
-				style="font-size:90.311px;font-family:Georgia;-inkscape-font-specification:Georgia;fill:#ffd42a;stroke:none;stroke-width:1.39835;stroke-dasharray:none;stroke-opacity:1"
-				d="M 138.87642,91.766217 A 64.820841,44.574244 0 0 0 116.0371,106.62236 V 154.475 a 64.820841,44.574244 0 0 0 22.83932,14.85614 z"
-				id="path1186" />
+				d="m 205.37169,165.12934 a 74.131085,41.848191 0 0 1 -26.44991,3.97159 c 9.57092,12.03396 18.34061,24.16055 26.23996,36.38738 h 43.81396 v -7.81627 c -1.90816,-0.0734 -4.29353,-0.36664 -7.15576,-0.88037 -2.86222,-0.51374 -5.24712,-1.24781 -7.15527,-2.20188 -2.27511,-1.17425 -4.99074,-2.93564 -8.14653,-5.28414 -3.15579,-2.42188 -6.3113,-5.6144 -9.4671,-9.57748 -4.1134,-5.17849 -7.78648,-9.73279 -11.67935,-14.59883 z"
+				style="font-size:246.944px;font-family:'Bernadette Rough';-inkscape-font-specification:'Bernadette Rough';fill:#ff0000;stroke-width:1.93249"
+				id="path10" />
 			<path
-				style="font-size:90.311px;font-family:Georgia;-inkscape-font-specification:Georgia;fill:#ffd42a;stroke:none;stroke-width:1.39835;stroke-dasharray:none;stroke-opacity:1"
-				d="m 180.42555,86.525125 -38.51891,42.916075 34.31702,45.51476 a 64.820841,44.574244 0 0 0 23.90037,-4.69897 l -36.07724,-47.57404 30.50978,-33.561862 a 64.820841,44.574244 0 0 0 -14.13102,-2.595963 z"
-				id="path1184" />
+				d="m 183.63693,85.947553 a 74.131085,41.848191 0 0 1 11.69869,1.502676 c 6.44035,-7.212212 12.83177,-14.380821 18.85303,-21.22051 1.76137,-1.908154 3.99964,-3.486379 6.71509,-4.734017 2.78884,-1.321029 5.46794,-2.2748 8.03661,-2.861924 1.61458,-0.293562 2.93563,-0.550274 3.9631,-0.770445 1.02746,-0.220172 2.05478,-0.367268 3.08225,-0.440659 0.95408,-0.07339 1.79823,-0.146468 2.53213,-0.219858 0.73391,-0.07339 1.21079,-0.110401 1.43097,-0.110401 v -7.815798 h -58.56565 v 7.815798 c 1.02747,0.07339 2.34851,0.183478 3.9631,0.330259 1.61459,0.07339 3.44906,0.330574 5.50399,0.770917 1.76137,0.440343 3.30259,1.027315 4.62362,1.76122 1.39442,0.660515 2.09195,1.541209 2.09195,2.642067 0,3.082402 -1.35805,6.641714 -4.07351,10.678193 -2.185,3.277504 -5.51199,7.53777 -9.85537,12.672482 z"
+				style="font-size:246.944px;font-family:'Bernadette Rough';-inkscape-font-specification:'Bernadette Rough';fill:#ffdd55;stroke-width:1.93249"
+				id="path8" />
 			<path
-				style="font-size:90.311px;font-family:Georgia;-inkscape-font-specification:Georgia;fill:#ff2a2a;fill-opacity:1;stroke:none;stroke-width:1.39835;stroke-dasharray:none;stroke-opacity:1"
-				d="m 188.16839,48.80372 0.23352,5.3599 9.55495,2.563194 c 2.09753,0.543804 3.1463,1.592571 3.1463,3.146295 0,1.709096 -1.12691,4.001305 -3.37981,6.875692 -2.25289,2.796701 -5.20453,6.254213 -8.85578,10.371577 l -1.5431,1.72063 a 78.058345,52.969881 0 0 1 13.87292,2.975599 l 9.46073,-10.407082 c 2.95208,-3.262816 5.71041,-6.097924 8.27405,-8.506195 2.64133,-2.408268 5.74925,-4.194609 9.32281,-5.3599 l 11.76856,-3.729397 -0.46567,-5.010313 c -8.00166,0.310746 -16.54673,0.465663 -25.63602,0.465663 -9.4777,0 -18.06253,-0.154906 -25.75345,-0.465663 z"
-				id="path1182" />
+				d="m 141.75216,101.12292 a 60.637175,30.916421 0 0 0 -23.44834,13.53965 v 25.43885 a 60.637175,30.916421 0 0 0 23.44834,13.54011 v -24.55281 h 2.8624 c 8.81474,9.44437 17.30664,19.1424 25.49641,29.07783 a 60.637175,30.916421 0 0 0 3.29078,0.1321 60.637175,30.916421 0 0 0 24.40373,-2.62697 c -1.31416,-1.63434 -2.80577,-3.5202 -4.09285,-5.11617 -7.26565,-9.10042 -16.4764,-19.96248 -27.63176,-32.58564 6.77242,-6.34144 13.59983,-13.28562 20.47554,-20.76334 a 60.637175,30.916421 0 0 0 -12.28467,-0.728456 c -3.40837,3.628576 -7.0018,7.268526 -10.83293,10.923536 -6.38498,6.01801 -12.87962,11.81607 -19.48477,17.39376 h -2.20188 z"
+				style="font-size:246.944px;font-family:'Bernadette Rough';-inkscape-font-specification:'Bernadette Rough';fill:#ffdd55;stroke-width:1.93249"
+				id="path6" />
 			<path
-				style="font-size:90.311px;font-family:Georgia;-inkscape-font-specification:Georgia;fill:#ffd42a;stroke:none;stroke-width:1.39835;stroke-dasharray:none;stroke-opacity:1"
-				d="m 98.324174,48.80372 0.233522,5.010313 14.449194,4.544648 c 1.78678,0.621489 2.71902,1.941708 2.79671,3.961548 0.0777,2.56364 0.11606,5.438503 0.11606,8.623633 0.0777,3.185133 0.11744,6.759173 0.11744,10.721165 V 92.787672 A 78.058345,52.969881 0 0 1 138.87642,82.192141 V 81.198 70.594275 c 0.0777,-3.262819 0.15583,-6.292599 0.23352,-9.089299 0.15539,-1.942154 1.16439,-3.145841 3.02885,-3.611957 l 13.28436,-4.078986 -0.58173,-5.010313 c -9.16697,0.310746 -18.37284,0.465663 -27.61749,0.465663 -9.24465,0 -18.87825,-0.154906 -28.899756,-0.465663 z"
-				id="text186" />
+				d="m 97.827807,49.276617 v 7.815798 c 2.054935,0.146782 4.440303,0.587128 7.155753,1.321033 2.71545,0.733906 5.06381,1.578061 7.04536,2.532138 2.49527,1.174249 4.14657,2.678453 4.95387,4.513215 0.88069,1.834763 1.32103,3.999959 1.32103,6.495237 v 27.500135 a 74.131085,41.848191 0 0 1 23.44834,-9.875194 V 70.853334 c 0,-2.421887 0.44034,-4.660631 1.32103,-6.715566 0.88069,-2.054935 2.56853,-3.5226 5.0638,-4.403287 1.46782,-0.513733 3.7431,-1.064166 6.8255,-1.651291 3.0824,-0.587124 5.65093,-0.917384 7.70587,-0.990775 v -7.815798 z"
+				style="font-size:246.944px;font-family:'Bernadette Rough';-inkscape-font-specification:'Bernadette Rough';fill:#ffdd55;stroke-width:1.93249"
+				id="path2" />
+			<path
+				d="m 141.75216,165.18548 v -11.54395 a 60.637175,30.916421 0 0 1 -23.44834,-13.54011 v 15.20887 a 74.131085,41.848191 0 0 0 23.44834,9.87519 z"
+				style="fill:#ff9955;stroke-width:1.93249;stroke:#000000;stroke-opacity:1" id="path14" />
+			<path
+				d="m 178.92178,169.10093 c -0.65493,-0.82348 -1.27963,-1.65059 -1.94239,-2.47317 -2.26127,-2.84274 -4.55739,-5.65758 -6.86842,-8.46121 a 60.637175,30.916421 0 0 1 -28.35881,-4.52502 v 11.54395 a 74.131085,41.848191 0 0 0 31.64959,4.04519 74.131085,41.848191 0 0 0 5.52003,-0.12974 z"
+				style="fill:#ff9955;stroke-width:1.93249;stroke:#000000;stroke-opacity:1" id="path12" />
+			<path
+				d="m 205.37169,165.12934 c -2.52191,-3.15239 -5.13684,-6.4364 -7.56621,-9.45766 a 60.637175,30.916421 0 0 1 -24.40373,2.62697 60.637175,30.916421 0 0 1 -3.29078,-0.1321 c 2.31103,2.80363 4.60715,5.61847 6.86842,8.46121 0.66276,0.82258 1.28746,1.64969 1.94239,2.47317 a 74.131085,41.848191 0 0 0 26.44991,-3.97159 z"
+				style="fill:#ff9955;stroke-width:1.93249;stroke:#000000;stroke-opacity:1" id="path11" />
 		</g>
 	</svg>
+
 
 	<div class="info">
 		<b class="name">My name is Sebastian Kumór</b>
