--- a/index.html
+++ b/index.html
@@ -85,9 +85,11 @@
 
 
 	<div class="info">
-		<b class="name">My name is Sebastian Kumór</b>
-		<p>I'm a student at Kielce University of Technology. My main languages are C, C++ and Lua.</p>
+		<b class="name">I'm Sebastian Kumór</b>
+		<p>Student at Kielce University of Technology. I do programming.</p>
+	</div>
 
+	<div class="links">
 		<a href="https://github.com/thekumor">● GitHub →</a>
 		<a href="https://www.youtube.com/channel/UCjzB0IKE2FWIXw2e7r91Lgw">● YouTube →</a>
 	</div>
