Removed uni info

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 	<div class="info">
 		<b class="name">I'm Sebastian Kumór</b>
-		<p>Student at Kielce University of Technology. I do programming.</p>
+		<p>Student and a freelancer. I program.</p>
 	</div>
 
 	<div class="links">
